--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = { version = "1.0.91", features = ["derive"] }
+serde_yaml = "0.8.9"
